2004-07-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (verb): explicitly warn that @verb cannot be
	used in xref contexts.

2004-07-27  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\float): The parameters for @float are
	  separated by commas; allow a space after each of the commas.

	The TeX code for @caption, @shortcaption and @copying now uses
	a similar mechanism to macro definitions.  In detail:

	* doc/texinfo.tex (\macrobodyctxt, \macroargctxt): Generalize, ...
	  (\scanctxt, \scanargctxt): ... and introduce new variants.
	  (\scanexp): New macro--expand the parameter and call \scantokens.
	  (\copying, \docopying, \insertcopying): Use \scanargctxt and
	  \scanexp--this simplifies things a lot.
	  (\caption, \shortcaption): Redefine, using \scanargctxt via ...
	  (\docaption, \defcaption): ... these new macros.
	  (\appendtomacro): Simplify code, using \expandafter.

2004-07-26  Karl Berry  <karl@gnu.org>

        Avoid using the path for output files, since this led to problems
        when incompatible files created by previous versions were found.
	* makeinfo/files.c (find_and_load): introduce second parameter
		use_path, set to 0 from the call in handle_delayed_writes,
		1 in all cases.
        * makeinfo/files.h: change decl.
        * makeinfo/cmds.c, makeinfo.c, node.c: change calls.
	From: Thomas Klausner <wiz@danbala.ifoer.tuwien.ac.at>,
	14 Jul 2004 00:31:54 +0200.

2004-07-25  Werner Lemberg  <wl@gnu.org>

	Rename @s to @slanted.

	* doc/texinfo.tex (\s): Replace with...
	(\slanted): This.
	* doc/texinfo.txi: Updated.

	* makeinfo/cmds.c (command_table): Add @slanted, not @s.
	(cm_s): Replace with...
	(cm_slanted): This.
	* makeinfo/cmds.h: Add cm_slanted, not cm_s..

	* NEWS: Updated.

2004-07-24  Karl Berry  <karl@gnu.org>

	* info/echo-area.c (ea_possible_completions),
	* info/session.c (forward_move_node_structure),
	* info/infokey.c (compile): cast to intptr_t to avoid cast to
		pointer from integer of different size.