@@ -1,3 +1,8 @@
+2004-07-30  Maciej W. Rozycki  <macro@linux-mips.org>
+
+	* info/filesys.c (extract_colon_unit): Clean up handling of the 
+	end of string.
+
 2004-07-27  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (verb): explicitly warn that @verb cannot be
